<resources>
    <string name="app_name">INF8405_TP2</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_group_name">Nom du groupe</string>
    <string name="prompt_picture">Photo du membre (Clicker pour modifier)</string>
    <string name="prompt_organisateur">Organisateur des rencontres (si le poste est vacant)</string>
    <string name="prompt_preference">Ecrire une nouvelle preference</string>
    <string name="action_sign_in">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCJaYOPnI1fOK38Ikdxk6xkkBdjiofbZk4</string>
</resources>
